# chai-dsl

./: .dockerignore  .gitignore  BACKLOG.md  BENCHMARKS.md  CLAUDE.md  Cargo.toml  DETECTOR_EVAL.md  Dockerfile  LICENSE  README.md  SECURITY.md  TEST_PLAN.md  three_layer
.github/workflows/: ci.yml  pages.yml
crates/chai/: Cargo.toml
crates/chai-core/: Cargo.toml
crates/chai-core/src/: analysis.rs  ast.rs  emission.rs  entity.rs  error.rs  evaluator.rs  lib.rs  pam.rs  parser.rs  schema.rs  smt.rs  taint.rs  template.rs
crates/chai/benches/: authorization.rs  evaluation.rs  production_policies.rs  streaming.rs
crates/chai/examples/: afc.rs  agent_eval.rs  agent_verification.rs  cedar_conformance.rs  cedar_style.rs  detector_eval.rs  effect_tagged_errors.rs  emission.rs  eval_strategy.rs  external_detectors.rs  full_pipeline.rs  gdrive.rs  icap.rs  pam_gate.rs  sidecar.rs  simple_rule.rs  streaming.rs  structured_rules.rs  three_layer_system.rs
crates/chai/src/: afc.rs  agent_verifier.rs  chai.rs  cli.rs  embed.rs  fact_calculator.rs  ffi.rs  grpc_authz.rs  icap.rs  lib.rs  mcp.rs  mcp_contract.rs  pg_store.rs  redis_store.rs  runtime.rs  server.rs  session.rs  streaming.rs  wasm.rs
crates/chai/tests/: conformance.rs  differential.proptest-regressions  differential.rs  drt_decision.rs  drt_emission.rs  drt_lean.rs  emission_invariants.proptest-regressions  emission_invariants.rs  exfiltration.rs  ffi_differential.rs  mcp_contract.rs  pam_guard.rs  postgres.rs  properties.rs  redis.rs  resolver_fault.rs  rigor.rs  session_budget.rs  taint_props.rs
docs/design/: DESIGN.md
eval/: presidio_cases.jsonl  presidio_eval.py
eval/agentdojo/: README.md  emission_policy.chai  results.csv  run_agentdojo.py  run_agentdojo_matrix.py  run_local_eval.py  toolgate_policy.chai
formal/: ChaiProofs.lean  DrtOracle.lean  EmitOracle.lean  README.md  lake-manifest.json  lakefile.toml
formal/ChaiProofs/: Budget.lean  Core.lean  Decision.lean  Emission.lean  FirstMatch.lean  Lookahead.lean  PamGuard.lean  Taint.lean
integrations/agentgateway/: README.md  extauthz.yaml  live.yaml  live_test.py  mcp_server.py  min.yaml  policy.chai
integrations/embed/: README.md  (+1 more)
samples/: README.md  aria.chai  demo_policy.chai  demo_tests.json  egress_acl.chai  emission.chai  emission.tests.json  mcp_authz.chai  mcp_authz.tests.json
user-guide/: 01-getting-started.md  02-policy-language.md  03-deployment.md  README.md
(+54 files in other folders)
